# td3

guias/guia1/Container-para-ejercicios/: CMakeLists.txt  guia1.cpp  guia1.h  main.cpp
practicas/ejemplo-estructura-archivos/: main.cpp
practicas/practica1/Ejercicio1/: 01_iniciando_suve  01_iniciando_suve.cpp  02_datos_random  02_datos_random.cpp  03_sucesiones  03_sucesiones.cpp  sucesion_de_fibonacci.cpp  sucesion_de_fibonacci.h
practicas/practica1/Ejercicio2/: 03_sucesiones.cpp  CMakeLists.txt
practicas/practica1/Ejercicio2/.devcontainer/: devcontainer.json
practicas/practica1/Ejercicio3/: CMakeLists.txt  login_suve.cpp  mayor_racha_test.cpp  mayor_racha_test.h
practicas/practica1/Ejercicio3 (google test)/: CMakeLists.txt  mayor_racha_google_test.cpp  mayor_racha_test.cpp
practicas/practica1/Ejercicio3 (google test)/lib/: mayor_racha.cpp  mayor_racha.h  test.cpp
practicas/practica1/Ejercicio3 (resuelto)/: CMakeLists.txt  login_suve.cpp  mayor_racha_test.h
practicas/practica1/Ejercicio3 (resuelto)/.devcontainer/: devcontainer.json
practicas/practica1/Ejercicio3 (resuelto)/lib/: seguridad.cpp  sucesion_de_fibonacci.h  test.h
practicas/practica1/Ejercicio3/lib/: mayor_racha.cpp  mayor_racha.h  seguridad.cpp  seguridad.h  sucesion_de_fibonacci.cpp
talleres/taller1/: funciones.cpp  listado.txt  wordle.cpp
talleres/taller1/tests/: listado_test_lleno.txt
